--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "i18n": "^0.15.0",
+    "i18n": "^0.15.1",
+    "i18next": "^22.4.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^12.1.5",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^5.1.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.2",
     "swiper": "^6.5.7",
